# Handy-Learning-Functions

./: CMakeLists.txt  IPv4Address.cpp  IPv4Address.h  IPv4Address_HelperFunctions.cpp  IPv4Address_HelperFunctions.h  PrintLargestPrime.cpp  PrintLargestPrime.h  README.md  SumOfNaturalsDivisibleby.cpp  SumOfNaturalsDivisibleby.h  ValidatesISBNs-10digit.cpp  ValidatesISBNs-10digit.h  main.cpp
